2015-05-13  Ilya Enkovich  <ilya.enkovich@intel.com>

	PR target/65103
	* config/i386/i386.c (ix86_rtx_costs): We want to propagate
	link time constants into adress expressions and therefore set
	their cost to 0.

2015-05-13  Jakub Jelinek  <jakub@redhat.com>

	PR target/66112
	* config/i386/i386.md (mulv<mode>4, umulv<mode>4, *umulv<mode>4):
	Use SWI248 iterator instead of SWI.
	(*mulv<mode>4_1): Use SWI48 instead of SWI.  Simplify output template.
	Use eq_attr "alternative" "0" instead of match_test in
	length_immediate attribute computation.
	(*mulvhi4, *mulvhi4_1): New define_insns.

	PR target/66112
	* internal-fn.c (get_min_precision): Use UNSIGNED instead of
	SIGNED to get precision of non-negative value.

2015-05-13  Ilya Enkovich  <ilya.enkovich@intel.com>

	PR target/66048
	* function.c (diddle_return_value_1): Process bounds first.
	* config/i38/i386.c (ix86_function_value_regno_p): Add bnd1
	register.

2015-05-13  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	PR rtl-optimization/64616
	* loop-invariant.c (can_move_invariant_reg): New.
	(move_invariant_reg): Call above new function to decide whether
	instruction can just be moved, skipping creation of temporary
	register.

2015-05-12  Jan Hubicka  <hubicka@ucw.cz>

	PR target/pr66047.c
	* i386.c (ix86_function_sseregparm): Only return -1 if local function
	with implied regparm is called from -mno-sse function.
	(init_cumulative_args): Output error if ix86_function_sseregparm
	return -1 and SSE register would be needed.
	(function_arg_advance_32): Likewise.
	(function_arg_32): Likewise.
	* i386.h (ix86_args): Add decl field.

2015-05-12  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/65873
	* ipa-inline.c (can_inline_edge_p): Allow early inlining of always
	inlines across optimization boundary.

2015-05-12  Jason Merrill  <jason@redhat.com>

	* config/mmix/mmix.c, config/msp430/msp430.c: Add space between
	string literal and macro name.

2015-05-12  Steve Ellcey  <sellcey@imgtec.com>
