@@ -1,3 +1,11 @@
+2015-05-13  Tom de Vries  <tom@codesourcery.com>
+
+	PR tree-optimization/66010
+	* gimplify.h (gimplify_va_arg_internal): Remove declaration.
+	* gimplify.c (gimplify_va_arg_internal): Remove and inline into ...
+	* tree-stdarg.c (expand_ifn_va_arg_1): ... here.  Choose between lval
+	and rval based on do_deref.
+
 2015-05-13  Ilya Enkovich  <ilya.enkovich@intel.com>
 
 	PR target/65103
